; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/extr_omap24xxcam.c_omap24xxcam_sensor_if_disable.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/extr_omap24xxcam.c_omap24xxcam_sensor_if_disable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.omap24xxcam_device = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.omap24xxcam_device*)* @omap24xxcam_sensor_if_disable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @omap24xxcam_sensor_if_disable(%struct.omap24xxcam_device* %0) #0 {
  %2 = alloca %struct.omap24xxcam_device*, align 8
  store %struct.omap24xxcam_device* %0, %struct.omap24xxcam_device** %2, align 8
  %3 = load %struct.omap24xxcam_device*, %struct.omap24xxcam_device** %2, align 8
  %4 = getelementptr inbounds %struct.omap24xxcam_device, %struct.omap24xxcam_device* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 4
  switch i32 %5, label %9 [
    i32 128, label %6
  ]

6:                                                ; preds = %1
  %7 = load %struct.omap24xxcam_device*, %struct.omap24xxcam_device** %2, align 8
  %8 = call i32 @omap24xxcam_core_xclk_set(%struct.omap24xxcam_device* %7, i32 0)
  br label %9

9:                                                ; preds = %1, %6
  ret void
}

declare dso_local i32 @omap24xxcam_core_xclk_set(%struct.omap24xxcam_device*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
